--- a/picture_library/src/main/res/values/styles.xml
+++ b/picture_library/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
     </style>
 
     <style name="picture_alert_dialog" parent="android:Theme.Dialog">
-        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsFloating">false</item>
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">false</item>
@@ -42,7 +42,7 @@
         <!-- 边框 -->
         <item name="android:windowFrame">@android:color/transparent</item>
         <!-- 是否浮现在activity之上 -->
-        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsFloating">false</item>
         <!-- 半透明 -->
         <item name="android:windowIsTranslucent">false</item>
         <!-- 无标题 -->
